# pugo-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
scripts/: test-coverage.sh
src/: main.rs
src/cmd/: args.rs  build.rs  create.rs  init.rs  mod.rs  serve.rs
src/cmd/initdata/: new_post.md  page.md  post.md
src/models/: archive.rs  author.rs  config.rs  mod.rs  output.rs  pagination.rs  post.rs  site.rs  tag.rs  theme.rs  tplvars.rs
src/utils/: mod.rs  url.rs
themes/default/: demo.html  page.hbs  post.hbs  posts.hbs
themes/default/partials/: footer.hbs  header.hbs  meta.hbs
themes/default/static/css/: main.css
