[package]
name = "pugo-rs"
version = "0.1.6"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]
description = "a simple static website generator"
homepage = "https://pugo.io"
repository = "https://github.com/fuxiaohei/pugo-rs"
keywords = ["ssg", "site", "static", "website", "generator"]
readme = "README.md"
license = "MIT"

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
md-5 = "0.10.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
rust-embed = "6.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
walkdir = "2.3.2"
