[package]
name = "pugo-rs"
version = "0.2.0"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]
description = "a simple static website generator"
homepage = "https://pugo.io"
repository = "https://github.com/fuxiaohei/pugo-rs"
keywords = ["ssg", "site", "static", "website", "generator"]
readme = "README.md"
license = "MIT"

[dependencies]
actix-files = "0.6.0"
actix-web = "4"
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "cargo"] }
crossbeam-channel = "0.5"
env_logger = "0.10.0"
flate2 = "1.0"
handlebars = { version = "4.3.0", features = ["no_logging"] }
html-minifier = "4.0.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
md-5 = "0.10.1"
notify = "5.0.0-pre.15"
pulldown-cmark = { version = "0.9.1", default-features = false }
rss = "2.0.6"
rust-embed = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sitewriter = "1.0.2"
tar = "0.4"
toml = "0.7.6"
walkdir = "2.3.2"
